--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.33.1",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
