--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap-icons": "^1.7.2",
+    "dotenv": "^16.0.1",
     "material-ui-search-bar": "^1.0.0",
     "npm": "^8.13.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook": "^8.1.4",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.33.1",
     "react-loader-spinner": "^4.0.0",
