--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.4.0",
     "react-share": "^4.4.0",
+    "suneditor": "^2.43.14",
     "suneditor-react": "^3.4.0",
     "web-vitals": "^1.0.1"
   },
