--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.4.0",
     "react-share": "^4.4.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "suneditor": "^2.43.14",
     "suneditor-react": "^3.4.0",
     "web-vitals": "^1.0.1"
