--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "semantic-ui-react": "^2.1.3",
     "suneditor": "^2.43.14",
     "suneditor-react": "^3.4.0",
-    "web-vitals": "^1.0.1",
-    "translations": "file:./public/locales/de/translations"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
